Fixed images overflowing outside of the popup when they have a very big ratio

--- a/src/less/widgets/mapPopup.less
+++ b/src/less/widgets/mapPopup.less
@@ -42,6 +42,7 @@
         }
 
         .photos {
+            overflow-x: hidden;
             .clearfix();
 
             .title {
